--- a/running_R_slides.Rmd
+++ b/running_R_slides.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "STAC32: Applications of Statistical Methods"
-author: "Lecture notes"
+title: "Running R"
+author: ""
 header-includes:
    - \usepackage{multicol}
 output: 
@@ -18,7 +18,6 @@ output:
 ```
 
 
-# Running R
 
 ```{r child="running_R.Rmd"}
 ```
