--- a/graphs_R_slides.Rmd
+++ b/graphs_R_slides.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "STAC32: Applications of Statistical Methods"
-author: "Lecture notes"
+title: "Making graphs"
+author: ""
 header-includes:
    - \usepackage{multicol}
 output: 
@@ -10,6 +10,7 @@ output:
     df_print: kable
     theme: "AnnArbor"
     colortheme: "dove"
+urlcolor: blue
 ---
 
 
@@ -17,9 +18,6 @@ output:
 ```{r child="preliminaries.Rmd", echo=F}
 ```
 
-# Course outline 
-
-# Making graphs
 
 ```{r, child="graphs_R.Rmd"}
 ```
