--- a/inference_1_R_slides.Rmd
+++ b/inference_1_R_slides.Rmd
@@ -10,13 +10,13 @@ output:
     df_print: kable
     theme: "AnnArbor"
     colortheme: "dove"
+urlcolor: blue
 ---
 
 
 
 ```{r child="preliminaries.Rmd", echo=F}
 ```
-
 
 
 ```{r, child="inference_1_R.Rmd"}
