--- a/inference_5_R.Rmd
+++ b/inference_5_R.Rmd
@@ -1,5 +1,5 @@
 
-## What to do if normality fails
+## Two-sample test: What to do if normality fails
 
 - If normality fails (for one or both of the groups), what do we do then?
 - Again, can compare medians: use the thought process of the sign test,
@@ -12,12 +12,12 @@ which does not depend on normality and is not damaged by outliers.
 Suppose we want to know whether people are in favour of having
 daylight savings time all year round. We ask 20 males and 20 females
 whether they each agree with having DST all year round (“yes”) or
-not (“no”). Some of the data: 
+not (“no”). Some of the data:
 
 ```{r, message=F}
 my_url="http://www.utsc.utoronto.ca/~butler/c32/dst.txt"
 dst=read_delim(my_url," ")
-dst %>% sample_n(5) # randomly sample 5 rows
+dst %>% slice_sample(n=5) # randomly sample 5 rows
 ```
 
 ## ... continued
@@ -137,11 +137,11 @@ my_url="http://www.utsc.utoronto.ca/~butler/c32/jumping.txt"
 rats=read_delim(my_url," ")
 ```
 
-## The data (some random rows) 
+## The data (some random rows)
 
 \small
 ```{r}
-rats %>% sample_n(12)
+rats %>% slice_sample(n=12)
 ```
 \normalsize
 
@@ -296,6 +296,7 @@ geom_boxplot()
 ```
 
 Assumptions:
+
 - Normally distributed data within each group
 - with equal group SDs.
 
@@ -412,5 +413,9 @@ library(PMCMRplus)
 gamesHowellTest(density~factor(group),data=rats)
 ```
 
+## Deciding which test to do
 
+For two or more samples:
+
+![Test flow chart](testflow.png)
 
