--- a/inference_5_R_slides.Rmd
+++ b/inference_5_R_slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Statistical Inference: matched pairs and normal quantile plot"
+title: "Statistical Inference: MMT / ANOVA"
 author: ""
 header-includes:
    - \usepackage{multicol}
