--- a/reports_R.Rmd
+++ b/reports_R.Rmd
@@ -1,6 +1,6 @@
-## Communicating your results qqq
+## Communicating your results
 
-- Being a statistician means being able to do several things: qqq
+- Being a statistician means being able to do several things:
 
     1. Obtain and process the data for analysis
     2. Do a suitable analysis
@@ -27,7 +27,7 @@ to learn to provide a complete and concise explanation of what your
 results tell you and why.
 - Reports are usually structured in a similar way, as shown on next page.
 
-## Report structure qqq
+## Report structure
 
 - *Introduction*: tell your readers about your problem and what you hope to
 find out. Provide enough explanation for the
@@ -38,13 +38,13 @@ also refer to what other people have done.
 (describing technology used, if any). Scientific
 people call this “Methods”. Also here: describe work to get data into right form.
 
-- *Analysis and results*: Not enough to give analysis; have to
-explain what you are doing and what made you do it. Describe
+- *Analysis and results*: Not enough to *give* analysis; have to
+*explain* what you are doing and what made you do it. Describe
 results in matter-of-fact way (opinions in the next section).
 
 - *Conclusions*: What does analysis tell you about your problem? Place
 results in context. Offer (supported) opinions about
-what the results mean, to you and the world. qqq
+what the results mean, to you and the world.
 
 ## A typical journal article
 
@@ -153,7 +153,7 @@ while you’re writing the report, or if you want to put it on a web site.
 - Word .doc output: when you think you’ve finished writing (slow). If
 you want to make changes, edit the R Markdown, close the Word doc
 and re-knit.
-- PDF, via a LaTeX installation qqq such as `tinytex` qqq (R Studio Cloud has this).
+- PDF, via a LaTeX installation such as `tinytex` (R Studio Cloud has LaTeX already).
 - Presentations of various flavours (makes suitable HTML/PDF out of the R
 Markdown).
 
