--- a/tidying_R.Rmd
+++ b/tidying_R.Rmd
@@ -1,22 +1,22 @@
 ## Tidying data
 - Data rarely come to us as we want to use them.
 - Before we can do analysis, typically have organizing to do.
-- This is typical of ANOVA-type data, “wide format”: 
+- This is typical of ANOVA-type data, “wide format”:
 
 ```
-pig feed1 feed2 feed3 feed4
-  1  60.8  68.7  92.6  87.9
-  2  57.0  67.7  92.1  84.2
-  3  65.0  74.0  90.2  83.1
-  4  58.6  66.3  96.5  85.7
-  5  61.7  69.8  99.1  90.3
+     pig feed1 feed2 feed3 feed4
+       1  60.8  68.7  92.6  87.9
+       2  57.0  67.7  92.1  84.2
+       3  65.0  74.0  90.2  83.1
+       4  58.6  66.3  96.5  85.7
+       5  61.7  69.8  99.1  90.3
 ```
 
-- 20 pigs are randomly allocated to one of four feeds. At the end of the
-study, the weight of each pig is recorded, and we want to know
-whether there are any differences in mean weights among the feeds.
-- Problem: want the weights all in one column, with 2nd column
-labelling which feed each weight was from. Untidy!
+- 20 pigs randomly allocated to one of four feeds. At end of 
+study, weight of each pig is recorded. 
+- Are any differences in mean weights among the feeds?
+- Problem: want all weights in one column, with 2nd column
+labelling which feed. Untidy!
 
 
 ## Tidy and untidy data (Wickham) 
@@ -57,14 +57,25 @@ pigs1 %>% pivot_longer(feed1:feed4, names_to="feed",
 ```
 
 - `pigs2` is now in “long” format, ready for analysis. See next page.
-- Anatomy of `gather`: what makes the columns different (different
-feeds), what makes them the same (all weights), which columns to
-combine.
+- Anatomy of `pivot_longer`: 
+    - columns to combine
+    - a name for column that will contain groups
+    - a name for column that will contain measurements
 
 ## Long format pigs
 
 ```{r}
 pigs2
+```
+
+## Identifying the pigs
+
+- Values in `pig` identify pigs *within each group*: pig 1 is four different pigs!
+- Create unique pig IDs by gluing pig number onto feed:
+
+```{r}
+pigs2 %>% mutate(pig_id=str_c(feed, "_", pig)) -> pigs2
+pigs2 %>% slice_sample(n=7)
 ```
 
 
@@ -140,6 +151,7 @@ glimpse(tb)
 cases for each gender and age group, eg. `m1524` is males aged 15–24.
 Also `mu` and `fu`, where age is unknown.
 - Lots of missings. Want to get rid of.
+- Abbreviations [here](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2).
 
 
 
@@ -197,12 +209,12 @@ tb %>%
 each line is incomplete, so that R knows more is to come.
 - I like to put the pipe symbol on the end of the line.
 
-## Total tuberculosis cases by year (some of the years) 
+## Total tuberculosis cases by year (some of the years)
 
 ```{r}
 tb3 %>%
   filter(between(year, 1991, 1998)) %>% 
-  count(year, wt=freq) 
+  group_by(year) %>% summarize(total=sum(freq))
 ```
 
 - Something very interesting happened between 1994 and 1995.
@@ -212,9 +224,9 @@ tb3 %>%
 - try counting up total cases by country:
 
 ```{r}
-tb3 %>% 
-  count(iso2, wt=freq) %>% 
-  arrange(desc(n))
+tb3 %>% group_by(iso2) %>% 
+  summarize(total=sum(freq)) %>% 
+  arrange(desc(total))
 ```
 
 ## what years do I have for China?
@@ -223,19 +235,27 @@ China started recording in 1995, which is at least part of the problem:
 
 ```{r}
 tb3 %>% filter(iso2=="CN") %>% 
-  count(year, wt=freq)
+  group_by(year) %>% 
+  summarize(total=sum(freq))
 ```
 
 ## first year of recording for each country?
 
-- A lot of countries started recording in about 1995:
+- A lot of countries started recording in about 1995, in fact:
+
+```{r, echo=FALSE}
+options(dplyr.summarise.inform = FALSE)
+```
+
+\small
 
 ```{r}
 tb3 %>% group_by(iso2) %>% 
   summarize(first_year=min(year)) %>% 
-  arrange(first_year)
+  count(first_year)
 ```
 
+\normalsize
 
 ## Some Toronto weather data
 
@@ -413,344 +433,5 @@ g
   `pivot_longer` and `pivot_wider` are opposites; `separate` and
   `unite` are opposites.
   
-
-
-## Doing things with data frames
-Let’s go back to our Australian athletes: 
-
-```{r read-athletes, echo=F}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
-athletes=read_tsv(my_url)
-```
-
-\footnotesize
-
-```{r}
-athletes
-```
-\normalsize
-
-## Choosing a column
-
-```{r}
-athletes %>% select(Sport)
-```
-
-## Choosing several columns
-
-```{r}
-athletes %>% select(Sport, Hg, BMI)
-```
-
-## Choosing consecutive columns
-
-```{r}
-athletes %>% select(Sex:WCC)
-```
-
-## Choosing all-but some columns
-
-```{r}
-athletes %>% select(-(RCC:LBM))
-```
-
-## Select-helpers
-Other ways to select columns: those whose name:
-
-- `starts_with` something
-- `ends_with` something
-- `contains` something
-- `matches` a “regular expression”
-- `num_range` like x1 to x3
-- `everything()` all the columns
-
-## Columns whose names begin with S 
-
-```{r}
-athletes %>% select(starts_with("S"))
-```
-
-## Columns whose names end with C
-
-either uppercase or lowercase:
-
-```{r}
-athletes %>% select(ends_with("c"))
-```
-
-## Case-sensitive
-
-This works with any of the select-helpers:
-
-```{r}
-athletes %>% select(ends_with("C", ignore.case=F))
-```
-
-
-## Column names containing letter R
-
-```{r}
-athletes %>% select(contains("r"))
-```
-
-## Exactly two characters, ending with T
-
-In regular expression terms, this is `^.t$`:
-
-- `^` means “start of text”
-- `.` means “exactly one character, but could be anything”
-- `$` means “end of text”.
-```{r}
-athletes %>% select(matches("^.t$"))
-```
-
-
-## Choosing rows by number 
-
-```{r}
-athletes %>% slice(16:25)
-```
-
-
-
-
-## Non-consecutive rows 
-
-```{r}
-athletes %>% 
-  slice(10,13,17,42)
-```
-
-## A random sample of rows
-
-```{r}
-athletes %>% slice_sample(n=8)
-```
-
-## Rows for which something is true
-
-\footnotesize
-```{r}
-athletes %>% filter(Sport == "Tennis")
-```
-\normalsize
-
-## More complicated selections
-
-```{r}
-athletes %>% filter(Sport == "Tennis", RCC < 5)
-```
-
-## Another way to do "and"
-
-```{r}
-athletes %>% filter(Sport == "Tennis") %>% 
-  filter(RCC < 5)
-```
-
-
-## Either/Or
-
-```{r}
-athletes %>% filter(Sport == "Tennis" | RCC > 5)
-```
-
-## Sorting into order
-
-```{r}
-athletes %>% arrange(RCC)
-```
-
-## Breaking ties by another variable
-
-```{r}
-athletes %>% arrange(RCC, BMI)
-```
-
-## Descending order
-
-```{r}
-athletes %>% arrange(desc(BMI))
-```
-
-## “The top ones”
-
-
-```{r}
-athletes %>%
-  arrange(desc(Wt)) %>%
-  slice(1:7) %>%
-  select(Sport, Wt)
-```
-
-## Another way
-
-```{r}
-athletes %>% 
-  slice_max(order_by = Wt, n=7) %>% 
-  select(Sport, Wt)
-```
-
-
-## Create new variables from old ones
-
-```{r new-from-old}
-athletes %>%
-  mutate(wt_lb = Wt * 2.2) %>%
-  select(Sport, Sex, Wt, wt_lb) %>% 
-  arrange(Wt)
-```
-
-## Turning the result into a number
-Output is always data frame unless you explicitly turn it into something
-else, eg. the weight of the heaviest athlete, as a number:
-
-```{r to-number}
-athletes %>% arrange(desc(Wt)) %>% pluck("Wt", 1)
-```
-
-Or the 20 heaviest weights in descending order:
-
-
-```{r}
-athletes %>%
-  arrange(desc(Wt)) %>%
-  slice(1:20) %>%
-  pluck("Wt")
-```
-
-## Another way to do the last one
-
-```{r}
-athletes %>%
-  arrange(desc(Wt)) %>%
-  slice(1:20) %>%
-  pull("Wt")
-```
-
-`pull` grabs the column you name *as a vector* (of whatever it contains).
-
-## To find the mean height of the women athletes
-Two ways:
-
-\small
-```{r}
-athletes %>% group_by(Sex) %>% summarize(m = mean(Ht))
-```
-
-```{r}
-athletes %>%
-  filter(Sex == "female") %>%
-  summarize(m = mean(Ht))
-```
-
-\normalsize
-
-## Summary of data selection/arrangement "verbs"
-
- \begin{tabular}{lp{0.7\textwidth}}
-    Verb & Purpose\\
-    \hline
-    \texttt{select} & Choose columns\\
-    \texttt{print} & Display non-default \# of rows/columns \\
-    \texttt{slice} & Choose rows by number\\
-    \texttt{sample\_n} & Choose random rows\\ 
-    \texttt{filter} & Choose rows satisfying conditions \\
-    \texttt{arrange}& Sort in order by column(s) \\
-    \texttt{mutate} & Create new variables\\
-    \texttt{group\_by} & Create groups to summarize by\\
-    \texttt{summarize} & Calculate summary statistics (by groups if defined)\\
-    \texttt{pluck} & Extract items from data frame\\
-    \texttt{pull} & Extract a single column from a data frame as a vector\\
-    \hline
-  \end{tabular}
-  
-  
-## Looking things up in another data frame
-Recall the tuberculosis data set, tidied: 
-```{r}
-tb3
-```
-
-What are actual names of those countries in `iso2`?
-
-## Actual country names
-Found actual country names to go with those abbreviations, in spreadsheet: 
-
-\footnotesize
-```{r}
-my_url <- 
-  "http://www.utsc.utoronto.ca/~butler/c32/ISOCountryCodes081507.xlsx"
-```
-
-\normalsize
-
-Note trick for reading in `.xlsx` from URL:
-
-```{r country-codes}
-f <- tempfile()
-download.file(my_url, f)
-country_names <- read_excel(f)
-```
-
-- set up temporary file
-- download spreadsheet to there
-- read it from temporary file (which is "local")
-
-
-## The country names
-
-```{r}
-country_names
-```
-
-## Looking up country codes
-Matching a variable in one data frame to one in another is called a **join**
-(database terminology):
-
-```{r}
-tb3 %>% left_join(country_names, by = c("iso2" = "Code_UC"))
-```
-
-## Total cases by country
-
-```{r}
-options(dplyr.summarise.inform=FALSE)
-```
-
-
-
-```{r}
-tb3 %>%
-  group_by(iso2) %>%
-  summarize(cases = sum(freq)) %>%
-  left_join(country_names, by = c("iso2" = "Code_UC")) %>%
-  select(Country, cases)
-```
-
-## or even sorted in order
-
-```{r}
-tb3 %>%
-  group_by(iso2) %>%
-  summarize(cases = sum(freq)) %>%
-  left_join(country_names, by = c("iso2" = "Code_UC")) %>%
-  select(Country, cases) %>%
-  arrange(desc(cases))
-```
-
-## Comments
-
-- This is probably not quite right because of:
-  - the 1994-1995 thing
-  - there is at least one country in `tb3` that was not in `country_names` (the NA above). Which?
-  
-\footnotesize  
-```{r}
-tb3 %>%
-  anti_join(country_names, by = c("iso2" = "Code_UC")) %>%
-  distinct(iso2)
-```
-\normalsize
 
 
