--- a/windmill_slides.Rmd
+++ b/windmill_slides.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "STAC32: Applications of Statistical Methods"
-author: "Lecture notes"
+title: "Case study 1: the windmill data"
+author: ""
 header-includes:
    - \usepackage{multicol}
 output: 
@@ -10,6 +10,7 @@ output:
     df_print: kable
     theme: "AnnArbor"
     colortheme: "dove"
+urlcolor: blue    
 ---
 
 
@@ -17,8 +18,6 @@ output:
 ```{r child="preliminaries.Rmd", echo=F}
 ```
 
-
-# Case study 1: the windmill data
 
 ```{r, child="windmill.Rmd"}
 ```
